[gd_scene load_steps=21 format=2]

[ext_resource path="res://Tilesets/TS-07-Plats.tres" type="TileSet" id=1]
[ext_resource path="res://Tilesets/TS-03-Back-Bricks.tres" type="TileSet" id=2]
[ext_resource path="res://Tilesets/TS-08-Ladder.tres" type="TileSet" id=3]
[ext_resource path="res://Tilesets/TS-06-Main-FX.tres" type="TileSet" id=4]
[ext_resource path="res://Tilesets/TS-05-Main-Brick.tres" type="TileSet" id=5]
[ext_resource path="res://Scenes/Map_Parts/MP-02-Kill_Zone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Map_Parts/MP-04-Navigation2D.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Map_Parts/MP-03-SideScroll_Over.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Guns/Pick/W_13_TOS_Pick.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Map_Parts/MP-11-Player_Spawner-VS.tscn" type="PackedScene" id=10]
[ext_resource path="res://Tilesets/TS-04-Back-FX.tres" type="TileSet" id=11]
[ext_resource path="res://Maps/map-00.gd" type="Script" id=12]
[ext_resource path="res://Scenes/Guns/Pick/W_18_Cricket_Pick.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Guns/Pick/W_14_TNG_Pick.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Guns/Pick/W_08_Uzi_Pick.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Power_Ups/Pick-Up-11-Balloon_Tanks.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/Power_Ups/Pick-Up-04-Jump_Power_Up.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Bad_Guys/Boss/BG-101-Boss.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/Map_Parts/MP-25-Activate_Area.tscn" type="PackedScene" id=19]

[sub_resource type="CapsuleShape2D" id=1]
radius = 128.0

[node name="Map-01-Disputed" type="Node2D"]
script = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true,
"_edit_vertical_guides_": [ 38.1926 ]
}

[node name="TileMap-Backround-01" type="TileMap" parent="." groups=["map_part"]]
z_index = -30
tile_set = ExtResource( 2 )
cell_size = Vector2( 20, 20 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 131072, 49, 0, 131073, 49, 0, 131074, 49, 0, 131075, 49, 0, 131076, 49, 0, 131077, 49, 0, 131078, 49, 0, 131079, 49, 0, 131080, 49, 0, 131081, 49, 0, 131082, 49, 0, 131109, 49, 0, 196608, 49, 0, 196609, 49, 0, 196610, 49, 0, 196611, 49, 0, 196612, 49, 0, 196613, 49, 0, 196614, 49, 0, 196619, 49, 0, 196620, 49, 0, 196621, 49, 0, 196622, 49, 0, 196623, 49, 0, 196624, 49, 0, 196625, 49, 0, 196630, 49, 0, 327773, 1, 0, 327774, 1, 0, 524350, 1, 0, 2818047, -1073741821, 0, 2949119, -1073741823, 0, 3014654, -1073741823, 0, 3080189, -1073741823, 0, 3080190, -1073741823, 0, 3407888, 1, 0, 3407892, 1, 0, 3407898, 1, 0, 3473422, -1073741823, 0, 3473423, -1073741823, 0, 3473424, -1073741823, 0, 3473425, -1073741823, 0, 3473426, -1073741823, 0, 3473427, -1073741823, 0, 3473428, -1073741823, 0, 3473429, -1073741823, 0, 3473430, -1073741823, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap-Backround-02" type="TileMap" parent="." groups=["map_part"]]
z_index = -30
tile_set = ExtResource( 2 )
cell_size = Vector2( 20, 20 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 131072, 49, 0, 131073, 49, 0, 131074, 49, 0, 131075, 49, 0, 131076, 49, 0, 131077, 49, 0, 131078, 49, 0, 131079, 49, 0, 131080, 49, 0, 131081, 49, 0, 131082, 49, 0, 131109, 49, 0, 196608, 49, 0, 196609, 49, 0, 196610, 49, 0, 196611, 49, 0, 196612, 49, 0, 196613, 49, 0, 196614, 49, 0, 196619, 49, 0, 196620, 49, 0, 196621, 49, 0, 196622, 49, 0, 196623, 49, 0, 196624, 49, 0, 196625, 49, 0, 196630, 49, 0, 327773, 1, 0, 327774, 1, 0, 524350, 1, 0, 2818047, -1073741821, 0, 2949119, -1073741823, 0, 3014654, -1073741823, 0, 3080189, -1073741823, 0, 3080190, -1073741823, 0, 3407888, 1, 0, 3407892, 1, 0, 3407898, 1, 0, 3473422, -1073741823, 0, 3473423, -1073741823, 0, 3473424, -1073741823, 0, 3473425, -1073741823, 0, 3473426, -1073741823, 0, 3473427, -1073741823, 0, 3473428, -1073741823, 0, 3473429, -1073741823, 0, 3473430, -1073741823, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap-Back-FX-01" type="TileMap" parent="." groups=["map_part"]]
z_index = -29
tile_set = ExtResource( 11 )
cell_size = Vector2( 20, 20 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap-Back-FX-02" type="TileMap" parent="." groups=["map_part"]]
z_index = -29
tile_set = ExtResource( 11 )
cell_size = Vector2( 20, 20 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap-Main-01" type="TileMap" parent="." groups=["map", "map_part"]]
tile_set = ExtResource( 5 )
cell_size = Vector2( 20, 20 )
collision_layer = 264
collision_mask = 522
format = 1
tile_data = PoolIntArray( 393213, 0, 0, 393214, 0, 1, 393215, 0, 1, 327680, 0, 5, 327681, 0, 196609, 327682, 0, 196609, 327683, 0, 196609, 327684, 0, 196609, 327685, 0, 196609, 327686, 0, 196609, 327687, 0, 196609, 327688, 0, 196609, 327689, 0, 196609, 327690, 0, 196609, 327691, 0, 196609, 327692, 0, 196609, 327693, 0, 196609, 327694, 0, 196609, 327695, 0, 196609, 327696, 0, 196609, 327697, 0, 196609, 327698, 0, 196609, 327699, 0, 196609, 327700, 0, 196609, 327701, 0, 196609, 327702, 0, 196609, 327703, 0, 196609, 327704, 0, 196609, 327705, 0, 196609, 327706, 0, 196609, 327707, 0, 196609, 327708, 0, 196609, 327709, 0, 196609, 327710, 0, 196609, 327711, 0, 196609, 327712, 0, 196609, 327713, 0, 196609, 327714, 0, 196609, 327715, 0, 196609, 327716, 0, 196609, 327717, 0, 196609, 327718, 0, 196609, 327719, 0, 196609, 327720, 0, 196609, 327721, 0, 196609, 327722, 0, 196609, 327723, 0, 196609, 327724, 0, 196609, 327725, 0, 196609, 327726, 0, 196609, 327727, 0, 196609, 327728, 0, 196609, 327729, 0, 196609, 327730, 0, 196609, 327731, 0, 196609, 327732, 0, 196609, 327733, 0, 196609, 327734, 0, 196609, 327735, 0, 196609, 327736, 0, 196609, 327737, 0, 196609, 327738, 0, 196609, 327739, 0, 196609, 327740, 0, 196609, 327741, 0, 196609, 327742, 0, 196609, 327743, 0, 196609, 327744, 0, 196609, 327745, 0, 196609, 327746, 0, 196609, 327747, 0, 196609, 327748, 0, 196609, 327749, 0, 196609, 327750, 0, 196609, 327751, 0, 196609, 327752, 0, 196609, 327753, 0, 196609, 327754, 0, 196609, 327755, 0, 196609, 327756, 0, 196609, 327757, 0, 196609, 327758, 0, 196609, 327759, 0, 196609, 327760, 0, 196609, 327761, 0, 196609, 327762, 0, 196609, 327763, 0, 196609, 327764, 0, 196609, 327765, 0, 196609, 327766, 0, 196609, 327767, 0, 196609, 327768, 0, 196609, 327769, 0, 196609, 327770, 0, 196609, 327771, 0, 196609, 327772, 0, 196609, 327773, 0, 196609, 327774, 0, 196609, 327775, 0, 6, 327776, 0, 1, 327777, 0, 1, 327778, 0, 2, 458749, 0, 65536, 458750, 0, 65537, 458751, 0, 65537, 393216, 0, 65538, 393311, 0, 65536, 393312, 0, 65537, 393313, 0, 65537, 393314, 0, 65538, 524285, 0, 65536, 524286, 0, 65537, 524287, 0, 65537, 458752, 0, 65538, 458847, 0, 65536, 458848, 0, 65537, 458849, 0, 65537, 458850, 0, 65538, 589821, 0, 65536, 589822, 0, 65537, 589823, 0, 65537, 524288, 0, 65538, 524383, 0, 65536, 524384, 0, 65537, 524385, 0, 65537, 524386, 0, 65538, 655357, 0, 65536, 655358, 0, 65537, 655359, 0, 65537, 589824, 0, 65538, 589919, 0, 65536, 589920, 0, 65537, 589921, 0, 65537, 589922, 0, 65538, 720893, 0, 65536, 720894, 0, 65537, 720895, 0, 65537, 655360, 0, 65538, 655455, 0, 65536, 655456, 0, 65537, 655457, 0, 65537, 655458, 0, 65538, 786429, 0, 65536, 786430, 0, 65537, 786431, 0, 65537, 720896, 0, 65538, 720991, 0, 65536, 720992, 0, 65537, 720993, 0, 65537, 720994, 0, 65538, 851965, 0, 65536, 851966, 0, 65537, 851967, 0, 65537, 786432, 0, 65538, 786527, 0, 65536, 786528, 0, 65537, 786529, 0, 65537, 786530, 0, 65538, 917501, 0, 65536, 917502, 0, 65537, 917503, 0, 65537, 851968, 0, 65538, 852063, 0, 65536, 852064, 0, 65537, 852065, 0, 65537, 852066, 0, 65538, 983037, 0, 65536, 983038, 0, 65537, 983039, 0, 65537, 917504, 0, 65538, 917599, 0, 65536, 917600, 0, 65537, 917601, 0, 65537, 917602, 0, 65538, 1048573, 0, 65536, 1048574, 0, 65537, 1048575, 0, 65537, 983040, 0, 65538, 983135, 0, 65536, 983136, 0, 65537, 983137, 0, 65537, 983138, 0, 65538, 1114109, 0, 65536, 1114110, 0, 65537, 1114111, 0, 65537, 1048576, 0, 65538, 1048671, 0, 65536, 1048672, 0, 65537, 1048673, 0, 65537, 1048674, 0, 65538, 1179645, 0, 65536, 1179646, 0, 65537, 1179647, 0, 65537, 1114112, 0, 65538, 1114207, 0, 65536, 1114208, 0, 65537, 1114209, 0, 65537, 1114210, 0, 65538, 1245181, 0, 65536, 1245182, 0, 65537, 1245183, 0, 65537, 1179648, 0, 65538, 1179743, 0, 65536, 1179744, 0, 65537, 1179745, 0, 65537, 1179746, 0, 65538, 1310717, 0, 65536, 1310718, 0, 65537, 1310719, 0, 65537, 1245184, 0, 65538, 1245279, 0, 65536, 1245280, 0, 65537, 1245281, 0, 65537, 1245282, 0, 65538, 1376253, 0, 65536, 1376254, 0, 65537, 1376255, 0, 65537, 1310720, 0, 65538, 1310815, 0, 65536, 1310816, 0, 65537, 1310817, 0, 65537, 1310818, 0, 65538, 1441789, 0, 65536, 1441790, 0, 65537, 1441791, 0, 65537, 1376256, 0, 65538, 1376351, 0, 65536, 1376352, 0, 65537, 1376353, 0, 65537, 1376354, 0, 65538, 1507325, 0, 65536, 1507326, 0, 65537, 1507327, 0, 65537, 1441792, 0, 65538, 1441887, 0, 65536, 1441888, 0, 65537, 1441889, 0, 65537, 1441890, 0, 65538, 1572861, 0, 65536, 1572862, 0, 65537, 1572863, 0, 65537, 1507328, 0, 65538, 1507423, 0, 65536, 1507424, 0, 65537, 1507425, 0, 65537, 1507426, 0, 65538, 1638397, 0, 65536, 1638398, 0, 65537, 1638399, 0, 65537, 1572864, 0, 65538, 1572959, 0, 65536, 1572960, 0, 65537, 1572961, 0, 65537, 1572962, 0, 65538, 1703933, 0, 65536, 1703934, 0, 65537, 1703935, 0, 65537, 1638400, 0, 65538, 1638495, 0, 65536, 1638496, 0, 65537, 1638497, 0, 65537, 1638498, 0, 65538, 1769469, 0, 65536, 1769470, 0, 65537, 1769471, 0, 65537, 1703936, 0, 65538, 1704031, 0, 65536, 1704032, 0, 65537, 1704033, 0, 65537, 1704034, 0, 65538, 1835005, 0, 65536, 1835006, 0, 65537, 1835007, 0, 65537, 1769472, 0, 65538, 1769567, 0, 65536, 1769568, 0, 65537, 1769569, 0, 65537, 1769570, 0, 65538, 1900541, 0, 65536, 1900542, 0, 65537, 1900543, 0, 65537, 1835008, 0, 65538, 1835103, 0, 65536, 1835104, 0, 65537, 1835105, 0, 65537, 1835106, 0, 65538, 1966077, 0, 65536, 1966078, 0, 65537, 1966079, 0, 65537, 1900544, 0, 65538, 1900639, 0, 65536, 1900640, 0, 65537, 1900641, 0, 65537, 1900642, 0, 65538, 2031613, 0, 65536, 2031614, 0, 65537, 2031615, 0, 65537, 1966080, 0, 65538, 1966175, 0, 65536, 1966176, 0, 65537, 1966177, 0, 65537, 1966178, 0, 65538, 2097149, 0, 65536, 2097150, 0, 65537, 2097151, 0, 65537, 2031616, 0, 65538, 2031711, 0, 65536, 2031712, 0, 65537, 2031713, 0, 65537, 2031714, 0, 65538, 2162685, 0, 65536, 2162686, 0, 65537, 2162687, 0, 65537, 2097152, 0, 65538, 2097247, 0, 65536, 2097248, 0, 65537, 2097249, 0, 65537, 2097250, 0, 65538, 2228221, 0, 65536, 2228222, 0, 65537, 2228223, 0, 65537, 2162688, 0, 65538, 2162783, 0, 65536, 2162784, 0, 65537, 2162785, 0, 65537, 2162786, 0, 65538, 2293757, 0, 65536, 2293758, 0, 65537, 2293759, 0, 65537, 2228224, 0, 65538, 2228319, 0, 65536, 2228320, 0, 65537, 2228321, 0, 65537, 2228322, 0, 65538, 2359293, 0, 65536, 2359294, 0, 65537, 2359295, 0, 65537, 2293760, 0, 65538, 2293855, 0, 65536, 2293856, 0, 65537, 2293857, 0, 65537, 2293858, 0, 65538, 2424829, 0, 65536, 2424830, 0, 65537, 2424831, 0, 65537, 2359296, 0, 65538, 2359391, 0, 65536, 2359392, 0, 65537, 2359393, 0, 65537, 2359394, 0, 65538, 2490365, 0, 65536, 2490366, 0, 65537, 2490367, 0, 65537, 2424832, 0, 65538, 2424927, 0, 65536, 2424928, 0, 65537, 2424929, 0, 65537, 2424930, 0, 65538, 2555901, 0, 65536, 2555902, 0, 65537, 2555903, 0, 65537, 2490368, 0, 65538, 2490463, 0, 65536, 2490464, 0, 65537, 2490465, 0, 65537, 2490466, 0, 65538, 2621437, 0, 65536, 2621438, 0, 65537, 2621439, 0, 65537, 2555904, 0, 65538, 2555999, 0, 65536, 2556000, 0, 65537, 2556001, 0, 65537, 2556002, 0, 65538, 2686973, 0, 65536, 2686974, 0, 65537, 2686975, 0, 65537, 2621440, 0, 65538, 2621535, 0, 65536, 2621536, 0, 65537, 2621537, 0, 65537, 2621538, 0, 65538, 2752509, 0, 65536, 2752510, 0, 65537, 2752511, 0, 65537, 2686976, 0, 65538, 2687071, 0, 65536, 2687072, 0, 65537, 2687073, 0, 65537, 2687074, 0, 65538, 2818045, 0, 65536, 2818046, 0, 65537, 2818047, 0, 65537, 2752512, 0, 65538, 2752607, 0, 65536, 2752608, 0, 65537, 2752609, 0, 65537, 2752610, 0, 65538, 2883581, 0, 65536, 2883582, 0, 65537, 2883583, 0, 65537, 2818048, 0, 65538, 2818143, 0, 65536, 2818144, 0, 65537, 2818145, 0, 65537, 2818146, 0, 65538, 2949117, 0, 65536, 2949118, 0, 65537, 2949119, 0, 65537, 2883584, 0, 65538, 2883679, 0, 65536, 2883680, 0, 65537, 2883681, 0, 65537, 2883682, 0, 65538, 3014653, 0, 65536, 3014654, 0, 65537, 3014655, 0, 65537, 2949120, 0, 65538, 2949215, 0, 65536, 2949216, 0, 65537, 2949217, 0, 65537, 2949218, 0, 65538, 3080189, 0, 65536, 3080190, 0, 65537, 3080191, 0, 65537, 3014656, 0, 65538, 3014751, 0, 65536, 3014752, 0, 65537, 3014753, 0, 65537, 3014754, 0, 65538, 3145725, 0, 65536, 3145726, 0, 65537, 3145727, 0, 65537, 3080192, 0, 65538, 3080287, 0, 65536, 3080288, 0, 65537, 3080289, 0, 65537, 3080290, 0, 65538, 3211261, 0, 65536, 3211262, 0, 65537, 3211263, 0, 65537, 3145728, 0, 65538, 3145823, 0, 65536, 3145824, 0, 65537, 3145825, 0, 65537, 3145826, 0, 65538, 3276797, 0, 65536, 3276798, 0, 65537, 3276799, 0, 65537, 3211264, 0, 65538, 3211359, 0, 65536, 3211360, 0, 65537, 3211361, 0, 65537, 3211362, 0, 65538, 3342333, 0, 65536, 3342334, 0, 65537, 3342335, 0, 65537, 3276800, 0, 65538, 3276895, 0, 65536, 3276896, 0, 65537, 3276897, 0, 65537, 3276898, 0, 65538, 3407869, 0, 65536, 3407870, 0, 65537, 3407871, 0, 65537, 3342336, 0, 65538, 3342431, 0, 65536, 3342432, 0, 65537, 3342433, 0, 65537, 3342434, 0, 65538, 3473405, 0, 65536, 3473406, 0, 65537, 3473407, 0, 65537, 3407872, 0, 131077, 3407873, 0, 1, 3407874, 0, 1, 3407875, 0, 1, 3407876, 0, 1, 3407877, 0, 1, 3407878, 0, 1, 3407879, 0, 1, 3407880, 0, 1, 3407881, 0, 1, 3407882, 0, 1, 3407883, 0, 1, 3407884, 0, 1, 3407885, 0, 1, 3407886, 0, 1, 3407887, 0, 1, 3407888, 0, 1, 3407889, 0, 1, 3407890, 0, 1, 3407891, 0, 1, 3407892, 0, 1, 3407893, 0, 1, 3407894, 0, 1, 3407895, 0, 1, 3407896, 0, 1, 3407897, 0, 1, 3407898, 0, 1, 3407899, 0, 1, 3407900, 0, 1, 3407901, 0, 1, 3407902, 0, 1, 3407903, 0, 1, 3407904, 0, 1, 3407905, 0, 1, 3407906, 0, 1, 3407907, 0, 1, 3407908, 0, 1, 3407909, 0, 1, 3407910, 0, 1, 3407911, 0, 1, 3407912, 0, 1, 3407913, 0, 1, 3407914, 0, 1, 3407915, 0, 1, 3407916, 0, 1, 3407917, 0, 1, 3407918, 0, 1, 3407919, 0, 1, 3407920, 0, 1, 3407921, 0, 1, 3407922, 0, 1, 3407923, 0, 1, 3407924, 0, 1, 3407925, 0, 1, 3407926, 0, 1, 3407927, 0, 1, 3407928, 0, 1, 3407929, 0, 1, 3407930, 0, 1, 3407931, 0, 1, 3407932, 0, 1, 3407933, 0, 1, 3407934, 0, 1, 3407935, 0, 1, 3407936, 0, 1, 3407937, 0, 1, 3407938, 0, 1, 3407939, 0, 1, 3407940, 0, 1, 3407941, 0, 1, 3407942, 0, 1, 3407943, 0, 1, 3407944, 0, 1, 3407945, 0, 1, 3407946, 0, 1, 3407947, 0, 1, 3407948, 0, 1, 3407949, 0, 1, 3407950, 0, 1, 3407951, 0, 1, 3407952, 0, 1, 3407953, 0, 1, 3407954, 0, 1, 3407955, 0, 1, 3407956, 0, 1, 3407957, 0, 1, 3407958, 0, 1, 3407959, 0, 1, 3407960, 0, 1, 3407961, 0, 1, 3407962, 0, 1, 3407963, 0, 1, 3407964, 0, 1, 3407965, 0, 1, 3407966, 0, 1, 3407967, 0, 65537, 3407968, 0, 65537, 3407969, 0, 65537, 3407970, 0, 65538, 3538941, 0, 131072, 3538942, 0, 131073, 3538943, 0, 131073, 3473408, 0, 131073, 3473409, 0, 131073, 3473410, 0, 131073, 3473411, 0, 131073, 3473412, 0, 131073, 3473413, 0, 131073, 3473414, 0, 131073, 3473415, 0, 131073, 3473416, 0, 131073, 3473417, 0, 131073, 3473418, 0, 131073, 3473419, 0, 131073, 3473420, 0, 131073, 3473421, 0, 131073, 3473422, 0, 131073, 3473423, 0, 131073, 3473424, 0, 131073, 3473425, 0, 131073, 3473426, 0, 131073, 3473427, 0, 131073, 3473428, 0, 131073, 3473429, 0, 131073, 3473430, 0, 131073, 3473431, 0, 131073, 3473432, 0, 131073, 3473433, 0, 131073, 3473434, 0, 131073, 3473435, 0, 131073, 3473436, 0, 131073, 3473437, 0, 131073, 3473438, 0, 131073, 3473439, 0, 131073, 3473440, 0, 131073, 3473441, 0, 131073, 3473442, 0, 131073, 3473443, 0, 131073, 3473444, 0, 131073, 3473445, 0, 131073, 3473446, 0, 131073, 3473447, 0, 131073, 3473448, 0, 131073, 3473449, 0, 131073, 3473450, 0, 131073, 3473451, 0, 131073, 3473452, 0, 131073, 3473453, 0, 131073, 3473454, 0, 131073, 3473455, 0, 131073, 3473456, 0, 131073, 3473457, 0, 131073, 3473458, 0, 131073, 3473459, 0, 131073, 3473460, 0, 131073, 3473461, 0, 131073, 3473462, 0, 131073, 3473463, 0, 131073, 3473464, 0, 131073, 3473465, 0, 131073, 3473466, 0, 131073, 3473467, 0, 131073, 3473468, 0, 131073, 3473469, 0, 131073, 3473470, 0, 131073, 3473471, 0, 131073, 3473472, 0, 131073, 3473473, 0, 131073, 3473474, 0, 131073, 3473475, 0, 131073, 3473476, 0, 131073, 3473477, 0, 131073, 3473478, 0, 131073, 3473479, 0, 131073, 3473480, 0, 131073, 3473481, 0, 131073, 3473482, 0, 131073, 3473483, 0, 131073, 3473484, 0, 131073, 3473485, 0, 131073, 3473486, 0, 131073, 3473487, 0, 131073, 3473488, 0, 131073, 3473489, 0, 131073, 3473490, 0, 131073, 3473491, 0, 131073, 3473492, 0, 131073, 3473493, 0, 131073, 3473494, 0, 131073, 3473495, 0, 131073, 3473496, 0, 131073, 3473497, 0, 131073, 3473498, 0, 131073, 3473499, 0, 131073, 3473500, 0, 131073, 3473501, 0, 131073, 3473502, 0, 131073, 3473503, 0, 131073, 3473504, 0, 131073, 3473505, 0, 131073, 3473506, 0, 131074 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap-Main-02" type="TileMap" parent="." groups=["map", "map_part"]]
tile_set = ExtResource( 5 )
cell_size = Vector2( 20, 20 )
collision_layer = 264
collision_mask = 522
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap-Plat-01" type="TileMap" parent="." groups=["map_part", "plat"]]
modulate = Color( 0.784314, 0, 0, 1 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 20, 20 )
collision_layer = 4
collision_mask = 4
format = 1
tile_data = PoolIntArray( 2490425, 6, 0, 2490426, 6, 1, 2490427, 6, 1, 2490428, 6, 1, 2490429, 6, 1, 2490430, 6, 1, 2490431, 6, 1, 2490432, 6, 2, 2621445, 6, 0, 2621446, 6, 1, 2621447, 6, 1, 2621448, 6, 1, 2621449, 6, 1, 2621450, 6, 1, 2621451, 6, 1, 2621452, 6, 1, 2621453, 6, 2, 2818105, 6, 0, 2818106, 6, 1, 2818107, 6, 1, 2818108, 6, 1, 2818109, 6, 1, 2818110, 6, 1, 2818111, 6, 1, 2818112, 6, 2, 2883590, 6, 0, 2883591, 6, 1, 2883592, 6, 1, 2883593, 6, 1, 2883594, 6, 1, 2883595, 6, 1, 2883596, 6, 2, 3145733, 6, 0, 3145734, 6, 1, 3145735, 6, 1, 3145736, 6, 1, 3145737, 6, 1, 3145738, 6, 1, 3145739, 6, 1, 3145740, 6, 1, 3145741, 6, 2, 3145785, 6, 0, 3145786, 6, 1, 3145787, 6, 1, 3145788, 6, 1, 3145789, 6, 1, 3145790, 6, 1, 3145791, 6, 1, 3145792, 6, 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap-Plat-02" type="TileMap" parent="." groups=["map_part", "plat"]]
modulate = Color( 0.784314, 0, 0, 1 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 20, 20 )
collision_layer = 4
collision_mask = 4
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap-Ladders-01" type="TileMap" parent="." groups=["map_part"]]
modulate = Color( 0.509804, 0.262745, 0, 1 )
z_index = -1
tile_set = ExtResource( 3 )
cell_size = Vector2( 20, 20 )
collision_layer = 32
collision_mask = 32
format = 1
tile_data = PoolIntArray( 3407942, 2, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap-Top-FX-01" type="TileMap" parent="." groups=["map_part"]]
z_index = 40
tile_set = ExtResource( 4 )
cell_size = Vector2( 20, 20 )
collision_layer = 4
collision_mask = 4
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="MP-04-Nav2D" parent="." instance=ExtResource( 7 )]

[node name="Player_spawns" type="Node2D" parent="."]

[node name="MP-11-Player_Spawner-VS-00" parent="Player_spawns" instance=ExtResource( 10 )]
position = Vector2( 110, 210 )

[node name="MP-11-Player_Spawner-VS-01" parent="Player_spawns" instance=ExtResource( 10 )]
position = Vector2( 240, 210 )

[node name="MP-11-Player_Spawner-VS-02" parent="Player_spawns" instance=ExtResource( 10 )]
position = Vector2( 380, 210 )

[node name="MP-11-Player_Spawner-VS-03" parent="Player_spawns" instance=ExtResource( 10 )]
position = Vector2( 520, 210 )

[node name="MP-11-Player_Spawner-VS-04" parent="Player_spawns" instance=ExtResource( 10 )]
position = Vector2( 690, 210 )

[node name="MP-11-Player_Spawner-VS-05" parent="Player_spawns" instance=ExtResource( 10 )]
position = Vector2( 584, 232 )

[node name="MP-11-Player_Spawner-VS-06" parent="Player_spawns" instance=ExtResource( 10 )]
position = Vector2( 1576, 208 )

[node name="MP-11-Player_Spawner-VS-07" parent="Player_spawns" instance=ExtResource( 10 )]
position = Vector2( 1448, 208 )

[node name="MP-11-Player_Spawner-VS-08" parent="Player_spawns" instance=ExtResource( 10 )]
position = Vector2( 1792, 408 )

[node name="MP-11-Player_Spawner-VS-09" parent="Player_spawns" instance=ExtResource( 10 )]
position = Vector2( 1640, 496 )

[node name="MP-11-Player_Spawner-VS-10" parent="Player_spawns" instance=ExtResource( 10 )]
position = Vector2( 1520, 210 )

[node name="MP-11-Player_Spawner-VS-11" parent="Player_spawns" instance=ExtResource( 10 )]
position = Vector2( 1660, 210 )

[node name="MP-11-Player_Spawner-VS-12" parent="Player_spawns" instance=ExtResource( 10 )]
position = Vector2( 1780, 210 )

[node name="MP-11-Player_Spawner-VS-13" parent="Player_spawns" instance=ExtResource( 10 )]
position = Vector2( 200, 592 )

[node name="Power_Ups" type="Node2D" parent="."]

[node name="Map_parts" type="Node2D" parent="." groups=["map_part"]]

[node name="MP-03-SideScroll_Over" parent="Map_parts" instance=ExtResource( 8 )]

[node name="Kill_Zone" parent="Map_parts" instance=ExtResource( 6 )]
position = Vector2( 1016.51, 1127.47 )

[node name="Start_Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="W_13_TOS_Pick" parent="." instance=ExtResource( 9 )]
position = Vector2( 216, 808 )

[node name="W_17_Mars_Pick" parent="." instance=ExtResource( 13 )]
position = Vector2( 656, 800 )

[node name="W_14_TNG_Pick" parent="." instance=ExtResource( 14 )]
position = Vector2( 312, 824 )

[node name="Weap-Pick-08-Uzi" parent="." instance=ExtResource( 15 )]
position = Vector2( 344, 712.051 )

[node name="Weap-Pick-08-Uzi2" parent="." instance=ExtResource( 15 )]
position = Vector2( 400, 744.051 )

[node name="Jump_Power_Up" parent="." instance=ExtResource( 17 )]
position = Vector2( 1280, 936 )

[node name="Pick-Up-11-Balloon_Tanks" parent="." instance=ExtResource( 16 )]
position = Vector2( 1032, 1024 )

[node name="BG-101-Boss" parent="." instance=ExtResource( 18 )]
position = Vector2( 792, 1040 )
activation_num = 1

[node name="MP-25-Activate_Area" parent="." instance=ExtResource( 19 )]
position = Vector2( 424, 824 )
activation_num = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="MP-25-Activate_Area"]
position = Vector2( 800, -72 )
shape = SubResource( 1 )
